--- a/ios/AppKeyReactNativeDemo/AppKeyReactNativeDemo.entitlements
+++ b/ios/AppKeyReactNativeDemo/AppKeyReactNativeDemo.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>webcredentials:appkey.io</string>
+		<string>webcredentials:portal.apploqr.net</string>
 	</array>
 </dict>
 </plist>
